# runbook

./: .gitignore  Dockerfile  README.md  README.rst  requirements.txt  setup.cfg  tox.ini
docker/runbook/: Dockerfile.j2
etc/: sample_config.json
raml/: api-reader.raml  api-writer.raml  api.raml
runbook/: config.py  main.py  main.sh  main_reader.py  main_runner.py  main_writer.py  runner.py  storage.py
runbook/api/: utils.py
runbook/api/v1/: runbook.py  runbook_.py
runbook/api/v1/reader/: run.py  runbook_.py
runbook/api/v1/runner/: run.py
runbook/api/v1/writer/: runbook_.py
runbook/drivers/: base.py  docker_images.py  shell.py
service/: runbook-api.yaml
service/files/: defaults.yaml
tests/unit/: test_noop.py
tests/unit/api/v1/: base.py  test_runbook.py
tests/unit/api/v1/reader/: test_runbook_.py
tests/unit/api/v1/writer/: test_runbook_.py
