[metadata]
name = api-runbook
summary = Stores and runs common runbooks for Cloud Eagle portal
description-file =
    README.rst
author = Mirantis Inc.
author-email = kzaitsev@mirantis.com
home-page = mirantis.com
license = Apache License, Version 2.0
classifier =
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    runbook

[entry_points]
console_scripts =
    runbook = runbook.main:main
    runbook-init-storage = runbook.storage:configure_regions

[global]
setup-hooks =
    pbr.hooks.setup_hook

